--- a/Petter/app/src/main/AndroidManifest.xml
+++ b/Petter/app/src/main/AndroidManifest.xml
@@ -8,8 +8,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
+        <activity android:name=".Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -20,7 +20,8 @@
         <activity android:name=".CreateHumanProfile" />
         <activity android:name=".Swipe" />
         <activity android:name=".HumanProfile" />
-        <activity android:name=".Message"></activity>
+        <activity android:name=".Message" />
+        <activity android:name=".PetManager"></activity>
     </application>
 
 </manifest>
